tests/keyvalue/keyvalue.exp
Error: keyvalue.js:5
  5:     (x[""]: number);
          ^^^^^ string. This type is incompatible with
  5:     (x[""]: number);
                 ^^^^^^ number

Error: keyvalue.js:5
  5:     (x[""]: number);
          ^^^^^ string ``. This type is incompatible with
  4:   function(x: { [key: number]: string }) {
                           ^^^^^^ number


Found 2 errors
